Fixed DetailView height on mobile screens and added better loading message

--- a/src/assets/styles/DetailCard.css
+++ b/src/assets/styles/DetailCard.css
@@ -159,7 +159,7 @@
 @media (min-width: 320px) and (max-width: 480px) {
     .detail-card{
         width: 350px;
-        height: 500px;
+        height: 520px;
     }
 
     .detail-card-image {
